EVA-6 Event Statistics
